# Rhodes

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Options.cmake  README.md  cpplint.cfg  rename.sh
cmake/: Findlinenoisecli.cmake
inc/rhodeus/: AbstractComponent.hpp  Application.hpp  Common.hpp  Configuration.hpp  CustomLogFormatter.hpp  Ipc.hpp  Message.hpp
inc/rhodeus/Configuration/: Configuration.hpp
inc/rhodeus/Ipc/: Ipc.hpp  IpcClient.hpp  IpcServer.hpp
include/rhodeus/: Application.hpp  Common.hpp  Communication.hpp  Component.hpp  CustomLogFormatter.hpp  Helper.hpp  Message.hpp
include/rhodeus/Configuration/: Configuration.hpp  DefaultConfiguration.hpp
include/rhodeus/Ipc/: Ipc.hpp  IpcClient.hpp  IpcServer.hpp
src/: AbstractComponent.cpp  Application.cpp  Communication.cpp  Component.cpp  Configuration.cpp  Helper.cpp  Ipc.cpp  Main.cpp  Message.cpp  Setup.cpp
src/Configuration/: Configuration.cpp
src/Ipc/: Ipc.cpp  IpcClient.cpp  IpcServer.cpp
test/: CMakeLists.txt  Message.cpp  TestMessage.cpp  TestVector.cpp
